# cozmo-vla

./: .env.example  .gitignore  README.md  dl-gpu-packages-backup.txt  environment-gpu.yml  pyproject.toml  requirements-gpu-torch.txt  requirements-teleop.txt  requirements.txt
configs/: cozmo_action_space.json  train_smolvla.yaml
science/: performance_report.md
scripts/: collect_data.py  debug_common.py  deploy_real_time.py  diag_torch_dll.py  prompt_ablation.py  replay_offline.py  teleop_debug.py  test_connection.py  train_smolvla.py  view_rollout.py
src/cozmo_vla/: __init__.py  teleop.py
src/cozmo_vla/datasets/: __init__.py  build_features.py
src/cozmo_vla/robot/: __init__.py  pycozmo_client.py
